# pyqaunicore-test-prj-minimal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
api/rest/: rest_client.py  rest_client_login.py  rest_client_users.py
api/rest/models/output/: api_model_output_users.py
api/ws/: ws_client.py  ws_client_echo.py
config/: config_general.py  config_init.py  constants.py
db/: db_adapter.py
db/db_client/: db_client.py  db_client_sql.py  db_client_users.py
db/models/: db_models_users.py
db/models/input/: db_model_input_users.py
db/models/output/: db_model_output_users.py
fixtures/: fixtures_db.py  fixtures_rest.py  fixtures_ui.py  fixtures_ws.py
reports/: report-WebScadaMT-4.9.0.33734-Windows.html  report-WebScadaMT-4.9.0.33734-Windows.xml  report-last.html  report-last.xml
support/loggers/: testrun_logger.py
support/validators/: data_validator.py
testrunner/: pytest_hooks.py
tests/: test_examples_db.py  test_examples_rest.py  test_examples_ui.py  test_examples_visual.py  test_examples_ws.py
ui/: ui_client.py  ui_engine.py
ui/pages/: page_auth.py
ui/pages/page_products/: page_products.py
ui/pages/page_products/elements/: main_menu.py  main_menu_items.py  product_card.py
